# claude-graph

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
claude_graph/: build.py  cli.py  default_languages.toml  graph_store.py  impact.py  install.py  languages.py  mcp_server.py  parser.py  query.py  repo.py  search.py  viz.py
claude_graph/static/: graph_template.html
docs/superpowers/plans/: 2026-07-08-claude-graph-implementation.md  2026-07-10-claude-graph-viz-implementation.md
docs/superpowers/specs/: 2026-07-08-claude-graph-design.md  2026-07-10-claude-graph-viz-design.md
tests/: conftest.py  test_build.py  test_cli.py  test_graph_store.py  test_impact.py  test_install.py  test_languages.py  test_mcp_server.py  test_no_network.py  test_parser.py  test_query.py  test_repo.py  test_search.py  test_viz.py
tests/fixtures/: sample.py  sample.ts
