[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-graph"
version = "0.1.0"
description = "Local-only knowledge graph for Claude Code on macOS"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
authors = [{ name = "Mohansagar" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0,<2",
    "tree-sitter>=0.23.0,<1",
    "tree-sitter-language-pack>=0.3.0,<1",
]

[project.scripts]
claude-graph = "claude_graph.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["claude_graph"]

[tool.hatch.build.targets.wheel.force-include]
"claude_graph/default_languages.toml" = "claude_graph/default_languages.toml"
"claude_graph/static/d3.v7.min.js" = "claude_graph/static/d3.v7.min.js"
"claude_graph/static/d3-LICENSE" = "claude_graph/static/d3-LICENSE"
"claude_graph/static/graph_template.html" = "claude_graph/static/graph_template.html"

[tool.pytest.ini_options]
testpaths = ["tests"]
